# health_app

./: LICENSE  README.md  fill_data.py  health_app.db  keyboards.py  main.py  parsers.py  pyproject.toml  sql_handler.py  states.py
bot_app/: bot_init.py  key_boards.py
config/: config.py
odm_files/: connect.py  crud.py  models.py
orm_files/: connection.py  fill_data.py  sql_handler.py
sql_files/: create_tables.sql
