[tool.poetry]
name = "health-app"
version = "0.1.0"
description = ""
authors = ["mdoktor7 <mdoktor696@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.8.0"
mongoengine = "^0.28.2"
python-dotenv = "^1.0.1"
aiohttp = "^3.9.5"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
